# TechDocLLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: cd.yml  ci.yml  dependabot-auto-lock.yml
app/: main.py
tests/: __init__.py  test_main.py
